--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/206afff65d.js" crossorigin="anonymous"></script>
+
     <style>
         .manrope-font{
             font-family: "Manrope", sans-serif;
@@ -202,7 +205,49 @@
 
     <main>
       <!-- About Us -->
-    
+      <div class="hero bg-base-200 ">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <img
+            src="./images/Rectangle.png"
+            class="max-w-sm rounded-lg shadow-2xl lg:max-w-md lg:mt-40" />
+          <div>
+            <div class="hidden lg:flex mt-5">
+              <img src="./images/Vector.png" alt="">
+            </div>
+            <div class="ml-10">
+            <a class="btn rounded-full bg-white font-bold px-8 my-4 text-unique-color text-base">
+              <i class="fa-solid fa-arrow-right"></i>About Us
+            </a>
+            <h1 class="text-5xl font-bold text-left w-4/5">We design thoughtful, liveable spaces</h1>
+            <p class="py-3 text-base font-medium text-left">
+              It shows a dedication to creating settings that are not just visually appealing but also functional and comfortable. It highlights the necessity of deliberate design, in which each piece is carefully examined to improve the quality of life.
+            </p>
+            <div class="card card-side bg-base-100 shadow-xl">
+              <figure class="pl-5">
+                <img
+                  src="./images/commercial.png"
+                  alt="commercial" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-xl font-extrabold unique-color">Commercial</h2>
+                <p class="text-base font-medium text-left">These designs frequently have a stunning appearance, characterized by towering, open areas, huge windows.</p>
+              </div>
+            </div>
+            <div class="card card-side bg-base-100 shadow-xl mt-3">
+              <figure class="pl-5">
+                <img
+                  src="./images/residential.png"
+                  alt="residential" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-xl font-extrabold unique-color">Residential</h2>
+                <p class="text-base font-medium text-left">This is particularly appealing to those who value the connection with nature, as it frequently features outside living spaces.</p>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
