work-process section added

--- a/index.html
+++ b/index.html
@@ -248,6 +248,77 @@
           </div>
         </div>
       </div>
+
+      <!-- works process -->
+      <div class="works-process-container hero bg-base-200">
+        <div class="hero-content text-center">
+          <div class="max-w-md lg:max-w-2xl">
+            <a class="btn rounded-full bg-white font-bold px-8 my-4 text-unique-color text-base">
+              <i class="fa-solid fa-arrow-right"></i>How we works
+            </a>
+            <h1 class="text-5xl font-bold">Our Works Process</h1>
+            <p class="py-6">
+              This organized method guarantees that the house design reflects the client's vision while also being functional, sustainable, and in accordance with all requirements. Collaboration between the customer, designer, and contractor throughout the project is critical to its success.
+            </p>
+
+            
+            
+          </div>
+        </div>
+      </div>
+
+                      <!-- cards -->
+      <div class="grid lg:grid-cols-4 gap-4 px-28 bg-base-200">
+
+        <div class="card card-compact bg-fuchsia-300 mb-16 w-72 p-3 shadow-xl grid justify-items-start">
+          <figure class=" ml-3 pt-3">
+            <img
+            class=""
+              src="./images/concept.png"
+              alt="concept" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-xl font-extrabold">Concept</h2>
+            <p class="text-base font-medium">It play important role in house design, impacting the overall appearance.</p>
+          </div>
+        </div>
+
+        <div class="card card-compact bg-yellow-300 mb-16 w-72 p-3 shadow-xl grid justify-items-start">
+          <figure class=" ml-3 pt-3">
+            <img
+              src="./images/flow-chart.png"
+              alt="design-process" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-xl font-extrabold">Design Process!</h2>
+            <p class="text-base font-medium">A house's design must prioritize how the occupants will use the space.</p>
+          </div>
+        </div>
+
+        <div class="card card-compact bg-green-300 mb-16 w-72 p-3 shadow-xl grid justify-items-start">
+          <figure class=" ml-3 pt-3">
+            <img
+              src="images/vision.png"
+              alt="Supervision" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-xl font-extrabold">Supervision</h2>
+            <p class="text-base font-medium">It includes the construction managing process from start to conclusion.</p>
+          </div>
+        </div>
+
+        <div class="card card-compact bg-blue-400 mb-16 w-72 p-3 shadow-xl grid justify-items-start">
+          <figure class=" ml-3 pt-3">
+            <img
+            src="./images/budget-planning.png"
+              alt="Budget planning" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-xl font-extrabold">Budget Planning</h2>
+            <p class="text-base font-medium">It guarantees that your dream house remains within financial reach</p>
+          </div>
+        </div>
+        </div>
     </main>
 
     <footer></footer>
