--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           'unique-color': "#494949",
           'common-color': '#737373',
           'heading-text-color': '#212121',
+          "nav": "#E9E9E9"
         }
       }
     }
@@ -72,7 +73,7 @@
                     d="M10 14L21 3M21 3H14M21 3V10"/>
                 </svg>
               </button>
-              <a class="btn btn-ghost text-2xl font-extrabold">ARinterio</a>
+              <a class="btn btn-ghost text-2xl font-extrabold text-nav">ARinterio</a>
             </div>
 
             <div class="navbar-center hidden lg:flex">
@@ -373,6 +374,59 @@
         </div>
     </main>
 
-    <footer></footer>
+
+    <!-- footer -->
+    <footer class="bg-secondary-color text-primary-content p-10 ">
+      <div class="footer footer-center">
+        <aside>
+          <div class="flex">
+            <button class="btn btn-circle bg-primary-color text-black btn-sm border-none">
+              <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-5"
+            fill="none"
+            viewBox="8 0 15 15"
+            stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1.5"
+              d="M10 14L21 3M21 3H14M21 3V10"/>
+          </svg>
+            </button>
+            <a class="pl-3 text-2xl font-extrabold text-nav">ARinterio</a>
+          </div>
+          <p class="text-base max-w-2xl">A delightful structure house design that combines natural beauty with modern comfort, offering open floor plans, exposed wooden beams, and comfortable, inviting places.</p>
+        </aside>
+      </div>
+
+      <nav class="flex justify-around mt-5 font-medium text-nav">
+        <a class="link link-hover">Home</a>
+        <a class="link link-hover">Services</a>
+        <a class="link link-hover">Portfolio</a>
+        <a class="link link-hover">Blogs</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav>
+
+      <div class=" footer-center mt-8">
+        <a class="btn rounded-full bg-primary-color text-lg font-black px-6 text-secondary-color ">Book Consult
+          <button class="btn btn-circle bg-secondary-color text-white btn-sm">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-4 w-5"
+              fill="none"
+              viewBox="8 0 15 15"
+              stroke="currentColor">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="1.5"
+                d="M10 14L21 3M21 3H14M21 3V10"/>
+            </svg>
+          </button>
+        </a>
+      </div>
+
+    </footer>
 </body>
 </html>
